Added json2.js for IE 6-7

--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
         <script src="../src/jquery.caret.js"></script>
 
         <script src="../lib/es5-shim-2.1.0.js"></script>
+        <script src="../lib/json2.js"></script>
         <script src="../src/tests.js"></script>
     </body>
 </html>
