--- a/test/newline-range.html
+++ b/test/newline-range.html
@@ -10,7 +10,7 @@
             }
             textarea {
                 width: 100%;
-                height: 10em;
+                height: 15em;
             }
         </style>
     </head>
@@ -34,7 +34,7 @@
             $(function() {
                 var lineNumbers = [ 1, 2, 3, 4 ];
                 var lines = $.map(lineNumbers,function (val) { return 'Line ' + val; });
-                var text = lines.join('\n');
+                var text = lines.join('\n') + '\n\nABC\n\nDEF';
 
                 var $textarea = $('textarea');
                 var $range = $('#range');
