Renamed lib/ to libs/

--- a/test/newline-caret.html
+++ b/test/newline-caret.html
@@ -18,13 +18,13 @@
         <p>Caret position: <b id="pos">...</b></p>
         <textarea></textarea>
 
-        <script src="../lib/jquery/core/jquery-1.10.0.js"></script>
-        <script src="../lib/qunit/qunit-1.12.0.js"></script>
-        <script src="../lib/qunit/pavlov-0.4.0pre.js"></script>
+        <script src="../libs/jquery/jquery-1.10.0.js"></script>
+        <script src="../libs/qunit/qunit-1.12.0.js"></script>
+        <script src="../libs/qunit/pavlov-0.4.0pre.js"></script>
         <script src="../src/jquery.caret.js"></script>
 
-        <script src="../lib/es5-shim-2.1.0.js"></script>
-        <script src="../lib/json2.js"></script>
+        <script src="../libs/es5-shim-2.1.0.js"></script>
+        <script src="../libs/json2.js"></script>
 
         <script>
             String.prototype.visualizeNewlines = function() {
