--- a/test/index.html
+++ b/test/index.html
@@ -3,19 +3,19 @@
     <head>
         <meta charset="utf-8">
         <title>jQuery Caret Test</title>
-        <link rel="stylesheet" href="../lib/qunit/qunit-1.12.0.css"/>
+        <link rel="stylesheet" href="../libs/qunit/qunit-1.12.0.css" />
     </head>
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
 
-        <script src="../lib/jquery/core/jquery-1.10.0.js"></script>
-        <script src="../lib/qunit/qunit-1.12.0.js"></script>
-        <script src="../lib/qunit/pavlov-0.4.0pre.js"></script>
+        <script src="../libs/jquery/jquery-1.10.0.js"></script>
+        <script src="../libs/qunit/qunit-1.12.0.js"></script>
+        <script src="../libs/qunit/pavlov-0.4.0pre.js"></script>
         <script src="../src/jquery.caret.js"></script>
 
-        <script src="../lib/es5-shim-2.1.0.js"></script>
-        <script src="../lib/json2.js"></script>
+        <script src="../libs/es5-shim-2.1.0.js"></script>
+        <script src="../libs/json2.js"></script>
         <script src="tests.js"></script>
     </body>
 </html>
