--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>jQuery Caret Test</title>
+        <title>jQuery Caret Test Suite</title>
         <link rel="stylesheet" href="../libs/qunit/qunit-1.12.0.css" />
     </head>
     <body>
