--- a/test/newline-range.html
+++ b/test/newline-range.html
@@ -21,6 +21,7 @@
         <script src="../src/jquery.caret.js"></script>
 
         <script src="../libs/es5-shim-2.1.0.js"></script>
+        <script src="../libs/console-shim-0.1.0.js"></script>
         <script src="../libs/json2.js"></script>
 
         <script>
