Use jQuery loader script instead of hard-coded path

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
 
-        <script src="../libs/jquery/jquery-1.10.0.js"></script>
+        <script src="../libs/jquery-loader.js"></script>
         <script src="../libs/qunit/qunit-1.12.0.js"></script>
         <script src="../libs/qunit/pavlov-0.4.0pre.js"></script>
         <script src="../src/jquery.caret.js"></script>
