--- a/test/newline-caret.html
+++ b/test/newline-caret.html
@@ -18,7 +18,7 @@
         <p>Caret position: <b id="pos">...</b></p>
         <textarea></textarea>
 
-        <script src="../libs/jquery/jquery-1.10.0.js"></script>
+        <script src="../libs/jquery-loader.js"></script>
         <script src="../src/jquery.caret.js"></script>
 
         <script src="../libs/es5-shim-2.1.0.js"></script>
