--- a/test/newline-range.html
+++ b/test/newline-range.html
@@ -18,6 +18,7 @@
         <p>Range: <b id="range">...</b></p>
         <textarea></textarea>
 
+        <script src="../libs/jquery-loader.js"></script>
         <script src="../src/jquery.caret.js"></script>
 
         <script src="../libs/es5-shim-2.1.0.js"></script>
