--- a/test/newline.html
+++ b/test/newline.html
@@ -24,7 +24,7 @@
                 };
             }
         </script>
-        <script src="../libs/jquery/jquery-1.10.0.js"></script>
+        <script src="../libs/jquery-loader.js"></script>
         <script src="../src/jquery.caret.js"></script>
         <script>
             String.prototype.visualizeNewlines = function() {
