Added box-sizing: border-box CSS rule to newline.html

--- a/test/newline.html
+++ b/test/newline.html
@@ -3,6 +3,11 @@
     <head>
         <title>Newline test - $.fn.caret() and $.fn.range()</title>
         <style>
+            *, *:before, *:after {
+                -moz-box-sizing: border-box;
+                -webkit-box-sizing: border-box;
+                box-sizing: border-box;
+            }
             textarea {
                 width: 50em;
                 height: 10em;
