--- a/test/newline.html
+++ b/test/newline.html
@@ -9,7 +9,7 @@
                 box-sizing: border-box;
             }
             textarea {
-                width: 50em;
+                width: 100%;
                 height: 10em;
             }
         </style>
