--- a/test/newline.html
+++ b/test/newline.html
@@ -17,20 +17,9 @@
     <body>
         <textarea></textarea>
 
-        <script>
-            // IE
-            if (typeof(window.console) === 'undefined') {
-                window.console = {
-                    log: function() {},
-                    debug: function() {},
-                    info: function() {},
-                    warn: function() {},
-                    error: function() {}
-                };
-            }
-        </script>
         <script src="../libs/jquery-loader.js"></script>
         <script src="../src/jquery.caret.js"></script>
+        <script src="../libs/console-shim-0.1.0.js"></script>
         <script>
             String.prototype.visualizeNewlines = function() {
                 return this.replace(/\n/g, '\\n').replace(/\r/g, '\\r');
