--- a/test/newline.html
+++ b/test/newline.html
@@ -19,7 +19,9 @@
 
         <script src="../libs/jquery-loader.js"></script>
         <script src="../src/jquery.caret.js"></script>
+        <script src="../libs/es5-shim-2.1.0.js"></script>
         <script src="../libs/console-shim-0.1.0.js"></script>
+        <script src="../libs/json2.js"></script>
         <script>
             String.prototype.visualizeNewlines = function() {
                 return this.replace(/\n/g, '\\n').replace(/\r/g, '\\r');
