--- a/test/newline-caret.html
+++ b/test/newline-caret.html
@@ -18,9 +18,13 @@
         <p>Caret position: <b id="pos">...</b></p>
         <textarea></textarea>
 
+        <!-- Load local jQuery.  This can be overridden with a ?jquery=___ param. -->
         <script src="../libs/jquery-loader.js"></script>
+
+        <!-- Load local Caret library. -->
         <script src="../src/jquery.caret.js"></script>
 
+        <!-- Test dependencies. -->
         <script src="../libs/es5-shim-2.1.0.js"></script>
         <script src="../libs/console-shim-0.1.0.js"></script>
         <script src="../libs/json2.js"></script>
