--- a/test/newline.html
+++ b/test/newline.html
@@ -17,11 +17,17 @@
     <body>
         <textarea></textarea>
 
+        <!-- Load local jQuery.  This can be overridden with a ?jquery=___ param. -->
         <script src="../libs/jquery-loader.js"></script>
+
+        <!-- Load local Caret library. -->
         <script src="../src/jquery.caret.js"></script>
+
+        <!-- Test dependencies. -->
         <script src="../libs/es5-shim-2.1.0.js"></script>
         <script src="../libs/console-shim-0.1.0.js"></script>
         <script src="../libs/json2.js"></script>
+
         <script>
             String.prototype.visualizeNewlines = function() {
                 return this.replace(/\n/g, '\\n').replace(/\r/g, '\\r');
