Removed version numbers from file names in libs/

--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>jQuery Caret Test Suite</title>
-        <link rel="stylesheet" href="../libs/qunit/qunit-1.12.0.css" />
+        <link rel="stylesheet" href="../libs/qunit/qunit.css" />
     </head>
     <body>
         <div id="qunit"></div>
@@ -13,15 +13,15 @@
         <script src="../libs/jquery-loader.js"></script>
 
         <!-- Load local QUnit. -->
-        <script src="../libs/qunit/qunit-1.12.0.js"></script>
-        <script src="../libs/qunit/pavlov-0.4.0pre.js"></script>
+        <script src="../libs/qunit/qunit.js"></script>
+        <script src="../libs/qunit/pavlov.js"></script>
 
         <!-- Load local Caret library. -->
         <script src="../src/jquery.caret.js"></script>
 
         <!-- Test dependencies. -->
-        <script src="../libs/es5-shim-2.1.0.js"></script>
-        <script src="../libs/console-shim-0.1.0.js"></script>
+        <script src="../libs/es5-shim.js"></script>
+        <script src="../libs/console-shim.js"></script>
         <script src="../libs/json2.js"></script>
 
         <!-- Unit tests. -->
