--- a/test/newline.html
+++ b/test/newline.html
@@ -24,8 +24,8 @@
         <script src="../src/jquery.caret.js"></script>
 
         <!-- Test dependencies. -->
-        <script src="../libs/es5-shim-2.1.0.js"></script>
-        <script src="../libs/console-shim-0.1.0.js"></script>
+        <script src="../libs/es5-shim.js"></script>
+        <script src="../libs/console-shim.js"></script>
         <script src="../libs/json2.js"></script>
 
         <script>
