--- a/test/manual/newline.html
+++ b/test/manual/newline.html
@@ -18,15 +18,15 @@
         <textarea></textarea>
 
         <!-- Load local jQuery.  This can be overridden with a ?jquery=___ param. -->
-        <script src="../libs/jquery-loader.js"></script>
+        <script src="../../libs/jquery-loader.js"></script>
 
         <!-- Load local Caret library. -->
-        <script src="../src/jquery.caret.js"></script>
+        <script src="../../src/jquery.caret.js"></script>
 
         <!-- Test dependencies. -->
-        <script src="../libs/es5-shim.js"></script>
-        <script src="../libs/console-shim.js"></script>
-        <script src="../libs/json2.js"></script>
+        <script src="../../libs/es5-shim.js"></script>
+        <script src="../../libs/console-shim.js"></script>
+        <script src="../../libs/json2.js"></script>
 
         <script>
             String.prototype.visualizeNewlines = function() {
