--- a/test/manual/newline-range.html
+++ b/test/manual/newline-range.html
@@ -18,8 +18,8 @@
         <p>Range: <b id="range">...</b></p>
         <textarea></textarea>
 
-        <!-- Load local jQuery.  This can be overridden with a ?jquery=___ param. -->
-        <script src="../../libs/jquery-loader.js"></script>
+        <!-- Load local jQuery. -->
+        <script src="../../libs/jquery/jquery.js"></script>
 
         <!-- Load local Caret library. -->
         <script src="../../src/jquery.caret.js"></script>
