--- a/test/manual/newline.html
+++ b/test/manual/newline.html
@@ -17,8 +17,8 @@
     <body>
         <textarea></textarea>
 
-        <!-- Load local jQuery.  This can be overridden with a ?jquery=___ param. -->
-        <script src="../../libs/jquery-loader.js"></script>
+        <!-- Load local jQuery. -->
+        <script src="../../libs/jquery/jquery.js"></script>
 
         <!-- Load local Caret library. -->
         <script src="../../src/jquery.caret.js"></script>
